[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/Lobby.gd" type="Script" id=2]

[node name="Lobby" type="Node2D"]
script = ExtResource( 2 )

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 298.0
margin_top = 115.0
margin_right = 761.0
margin_bottom = 437.0

[node name="HostBtn" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.5
margin_top = 6.0
margin_right = -31.5
margin_bottom = 76.0
text = "Host"
icon = ExtResource( 1 )

[node name="JoinBtn" type="Button" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 18.5
margin_top = 7.0
margin_right = 174.5
margin_bottom = 77.0
text = "Join"
icon = ExtResource( 1 )

[node name="NameEdt" type="LineEdit" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -135.0
margin_right = 114.5
margin_bottom = -111.0

[node name="Label" type="Label" parent="Connect/NameEdt"]
margin_left = -47.0
margin_top = 6.0
margin_right = -7.0
margin_bottom = 20.0
text = "Name:"

[node name="IpEdt" type="LineEdit" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = -80.0
margin_right = 114.5
margin_bottom = -56.0
text = "127.0.0.1"

[node name="Label" type="Label" parent="Connect/IpEdt"]
margin_left = -48.0
margin_top = 4.0
margin_right = -8.0
margin_bottom = 18.0
text = "Ip:"

[node name="ErrorLabel" type="Label" parent="Connect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.5
margin_top = 108.0
margin_right = 153.5
margin_bottom = 122.0

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 377.0
margin_top = 67.0
margin_right = 731.0
margin_bottom = 528.0

[node name="StartBtn" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 52.5
margin_right = 82.0
margin_bottom = 122.5
text = "Start"
icon = ExtResource( 1 )

[node name="CancelBtn" type="Button" parent="Players"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = 130.5
margin_right = 82.0
margin_bottom = 200.5
text = "Cancel"
icon = ExtResource( 1 )

[node name="List" type="ItemList" parent="Players"]
margin_left = 31.0
margin_top = 20.0
margin_right = 326.0
margin_bottom = 263.0

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[connection signal="pressed" from="Connect/HostBtn" to="." method="_on_HostBtn_pressed"]
[connection signal="pressed" from="Connect/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="Players/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="Players/CancelBtn" to="." method="_on_CancelBtn_pressed"]
